# rust-in-python-example

./: README.md  pyproject.toml
python_fibonacci/: main.py
rust/: Cargo.toml
rust/src/: lib.rs
